fix: get rid of ugly scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,22 @@ $yellow: #FEBD29;
   padding: 0;
 }
 
+// scroll bar
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+::-webkit-scrollbar-track {
+  background: $black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $gray;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $black;
+}
 
 // styles
 :root {
